# noname_rpg_bot

./: .env.dist  .gitignore  Makefile  docker-compose.yml  pyproject.toml
bot/: __main__.py  misc.py  settings.py  types.py
bot/database/: db.py
bot/handlers/player/: router.py  start.py
bot/models/: __init__.py  base.py  player.py
bot/services/: base.py  player.py
bot/utils/: cli.py
migrations/models/: 0_20221003142552_init.py
